# python_sb

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  __main__.py  pyproject.toml
.github/workflows/: python-build.yml
flask-by-example/: .env.dev  .env.test  Makefile  README.md  pyproject.toml
flask-by-example/flask_by_example/: app.py  config.py
python_sb/: __init__.py  async_learning.py  dog.py  main.py
spec/: attrs_spec.py  cipher_spec.py  cypher_spec.py  dictionary_spec.py  encoder_spec.py  encryptor_spec.py  enumerable_spec.py  list_comprehension_spec.py  list_spec.py
spec/python_tricks/: assert_spec.py  chapter02_spec.py  chapter03_spec.py  chapter04_spec.py  chapter05_spec.py  chapter06_spec.py  chapter07_spec.py
tests/: context.py  test_basic.py  test_ex01_lists.py  test_ex02_list_comprehensions.py  test_ex03_dictionary.py  test_ex04_counter.py  test_metaprogramming.py
tests/algorithms/: test_binary_search.py  test_quicksort.py  test_recursions.py  test_selection_sort.py
wordcount/: .env.dev  .env.test  Makefile  README.md  docker-compose.yaml  pyproject.toml
wordcount/migrations/versions/: 5bb382693677_.py  b7eca89003fa_.py
wordcount/tests/: test_flask_by_example.py
wordcount/wordcount/: app.py  config.py  models.py
wordcount/wordcount/templates/: index.html
