[tool.poetry]
name = "python_sb"
version = "0.1.0"
description = ""
authors = ["Attila Domokos <adomokos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
mamba = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
my-script = "python_sb.main:run"
async-example = "python_sb.async_learning:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
