[tool.poetry]
name = "wordcount"
version = "0.1.0"
description = ""
authors = ["Attila Domokos <adomokos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
server = "wordcount.app:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
