[tool.poetry]
name = "wordcount"
version = "0.1.0"
description = ""
authors = ["Attila Domokos <adomokos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^1.1.2"
psycopg2-binary = "^2.8.6"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
server = "wordcount.app:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
